[package]
name = "clia-rcproxy"
version = "2.2.0"
authors = ["clia <clia@163.com>", "wayslog <zxs867179@gmail.com>"]
description = "A lightweight, fast and powerful Redis Cluster Proxy written in Rust."
homepage = "https://github.com/clia/rcproxy"
repository = "https://github.com/clia/rcproxy"
documentation = "https://docs.rs/clia-rcproxy/2.1.0"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = ["redis", "cluster", "proxy"]
edition = "2021"

[[bin]]
name = "rcproxy"
path = "bin/proxy.rs"

[lib]
name = "libaster"
path = "src/lib.rs"

[[bench]]
name = "aster_bench"
harness = false

[dev-dependencies]
assert2 = "0.1.1"
criterion = "0.2"

[dependencies]
actix-rt =  "0.2.5"
actix-web =  "1.0"
aho-corasick = "0.7.6"
bitflags = "1.0.4"
btoi = "0.4"
byteorder = "1.3.2"
bytes = "0.4"
chrono = "0.4.15"
clap = { version = "2.33.0", features = ["yaml"] }
clia-tracing-config = "0.2.4"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
get_if_addrs = "0.5.3"
hashbrown = "0.3.0"
hotwatch = "0.4.3"
itoa = "0.4.4"
lazy_static = "1.1"
log = "0.4"
md5 = "0.6"
net2 = "0.2"
num_cpus = "1.8"
prometheus =  "0.7.0"
rand = "0.7.1"
rayon = "1.2.0"
serde = "1.0"
serde_derive = "1.0"
slab = "0.4"
sysinfo =  "0.9.5"
time = { version = "0.3", features = ["macros", "local-offset"] }
tokio = "0.1"
tokio-codec = "0.1"
toml = "0.4"

[profile.release]
debug = true
lto = true
