[package]
name = "clia-rcproxy"
version = "2.2.1"
authors = ["clia <clia@163.com>", "wayslog <zxs867179@gmail.com>"]
description = "A lightweight, fast and powerful Redis Cluster Proxy written in Rust."
homepage = "https://github.com/clia/rcproxy"
repository = "https://github.com/clia/rcproxy"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = ["redis", "cluster", "proxy"]
edition = "2021"

[[bin]]
name = "rcproxy"
path = "bin/proxy.rs"

[lib]
name = "libaster"
path = "src/lib.rs"

[[bench]]
name = "aster_bench"
harness = false

[dev-dependencies]
assert2 = "0.1.1"
criterion = "0.2"

[dependencies]
bitflags = "1.3.2"
btoi = "0.4.2"
byteorder = "1.4.3"
chrono = "0.4.23"
env_logger = "0.9.3"
failure = "0.1.8"
get_if_addrs = "0.5.3"
hashbrown = "0.13.1"
hotwatch = "0.4.6"
itoa = "1.0.4"
lazy_static = "1.1"
log = "0.4.17"
md5 = "0.7"
net2 = "0.2.38"
prometheus =  "0.13.3"
rayon = "1.2.0"
serde = "1.0.147"
serde_derive = "1.0.147"
sysinfo =  "0.26.7"
toml = "0.5.9"
rand = "0.8.5"
aho-corasick = "0.7.19"
time = { version = "0.3.17", features = ["macros", "local-offset"] }
clia-tracing-config = "0.2.5"
# 未升级
futures = "0.1"
clap = { version = "2.33.0", features = ["yaml"] }
bytes = "0.4"
actix-rt =  "0.2.5"
actix-web =  "1.0"
tokio = "0.1"
tokio-codec = "0.1"

[profile.release]
debug = true
lto = true
